<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tickets_nav"
        android:icon="@drawable/tickets_selector"
        android:title="@string/tickets_label"/>

    <item
        android:id="@+id/hotels_nav"
        android:icon="@drawable/hotels_selector"
        android:title="@string/hotels_label"/>

    <item
        android:id="@+id/profile_nav"
        android:icon="@drawable/profile_selector"
        android:title="@string/shorter_label"/>

    <item
        android:id="@+id/shorter_nav"
        android:icon="@drawable/shorter_selector"
        android:title="@string/subscriptions_label"/>

    <item
        android:id="@+id/subscriptions_nav"
        android:icon="@drawable/subscriptions_selector"
        android:title="@string/profile_label"/>
</menu>