<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_bottom"
    android:id="@+id/scrollview"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.tickets.TicketsFragment">

        <LinearLayout
            android:id="@+id/title_container"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_title_fragment"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:textSize="22sp"
                android:text="@string/title_tickets_fragment"
                android:textAlignment="center"
                android:textColor="@color/title_ticket_fragment" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_edit_btn"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_search_container"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:backgroundTint="@color/gray_dark"
                app:cardCornerRadius="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_search"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/gray_medium"
                    app:cardCornerRadius="16dp">

                    <LinearLayout
                        android:weightSum="6"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/search"
                            android:layout_weight="1"
                            android:tint="@color/white"
                            android:layout_gravity="center"
                            android:layout_width="0dp"
                            android:layout_height="24dp"/>

                        <LinearLayout
                            android:layout_weight="5"
                            android:padding="4dp"
                            android:paddingEnd="16dp"
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/tv_from"
                                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюя АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_pro_display_semibold"
                                android:textSize="16sp"
                                android:hint="@string/from"
                                android:textColorHint="@color/tint_btm"
                                android:background="@null"
                                android:textColor="@color/white" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/divider" />

                            <TextView
                                android:id="@+id/tv_to"
                                android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюя АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ"
                                android:paddingTop="8dp"
                                android:paddingBottom="8dp"
                                android:fontFamily="@font/sf_pro_display_semibold"
                                android:textSize="16sp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/to"
                                android:textColor="@color/white"
                                android:textColorHint="@color/tint_btm" />

                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_section_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:textSize="22sp"
                android:text="@string/title_section_music"
                android:textAlignment="textStart" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_offers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_offer" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>